# python-project-83

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  app_repository.py  db_init.py  db_pool.py  service.py
static/css/: main.css
static/css/pages/: search.css  url_info.css  urls.css
templates/errors/: 404.html  error.html  layout.html
templates/main/: layout.html  search.html  url_info.html  urls.html
tests/: test_Dockerfile.py  test_app.py  test_connection_to_database.py  test_http_requests.py  test_service.py
tests/fixtures/: urls.json
