[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a website that analyzes specified pages for SEO suitability"
authors = ["Safar Galimzyanov <safargalimzyanov@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"},
    {include = "tests"}
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
bs4 = "^0.0.2"
validators = "^0.34.0"
bleach = "^6.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pook = "^2.1.1"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
